fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -145,7 +145,7 @@ input{
   background: rgba(0, 0, 0, 0.2);
 }
 .tryit{
-  margin: 6rem 0 0;
+  margin: 2rem 0 0;
 }
 .orbox-horizontal-small {
     background-image: url('../images/lines-h.png');
